--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 *{
     font-family: 'Poppins', 'verdana';
     font-size: 14pt;
@@ -128,7 +131,7 @@ ul a:hover{
   animation-duration: 3s;
 }
 
-@-webkit-keyframes fade {
+/* @-webkit-keyframes fade {
   from {opacity: .6}
   to {opacity: 1}
 }
@@ -136,4 +139,4 @@ ul a:hover{
 @keyframes fade {
   from {opacity: .6}
   to {opacity: 1}
-}
+} */
