--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -131,13 +131,21 @@ ul a:hover{
   animation-name: fade;
   animation-duration: 3s;
 }
-
-/* @-webkit-keyframes fade {
-  from {opacity: .6}
-  to {opacity: 1}
+.svg-background{
+  position: absolute; 
+  left: 0;
+  width: 100%;
+  z-index: 1;
 }
 
-@keyframes fade {
-  from {opacity: .6}
-  to {opacity: 1}
-} */
+.project-link {
+  color: black;
+}
+.xyz {
+  display: flex;
+  width: 50%;
+}
+.bold-link {
+  font-weight: bold;
+  color: white;
+}
