--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins &display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:"Poppins", sans-serif;
-    font-size: 14pt;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-size: 14pt;
 }
 
 html {
@@ -14,315 +14,360 @@ html {
 /* flex and min height to put footer on the bottom and other setting to make the body look good */
 body {
   min-height: 100vh !important;
-  
 }
-li a{
-    color: black;
-    text-decoration: none;
+li a {
+  color: black;
+  text-decoration: none;
 }
-header{
-    padding-top: 0.2rem;
-    /* border-bottom: 1px solid black; */
+header {
+  padding-top: 0.2rem;
+  /* border-bottom: 1px solid black; */
 }
-main{
-    min-height: 125vh;
-    background-image: url("../images/sassy left.png");
-    background-size: 60%;
-    background-repeat: no-repeat;
+main {
+  min-height: 125vh;
+  background-image: url("../images/sassy left.png");
+  background-size: 60%;
+  background-repeat: no-repeat;
 }
 @media (max-width: 812px) {
-    main{
-        min-height: 100vh;
-        background-image: none;
-        /* background-image: url("../images/sassy left.png");
+  main {
+    min-height: 100vh;
+    background-image: none;
+    /* background-image: url("../images/sassy left.png");
         background-size: 60%;
         background-repeat: no-repeat; */
-    }
-    .main-box{
-        flex-direction: column;
-    }
-    .text-box{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: 0rem !important;
-    }
-    .inside-text-box{
-        text-align: center;
-    }
-}
-li a:hover{
-    color: rgb(88, 88, 88);
-    text-decoration: none;
-}
-.links{
+  }
+  .main-box {
+    flex-direction: column;
+  }
+  .text-box {
     display: flex;
     justify-content: center;
     align-items: center;
-    list-style: none;
-    margin: 0;
+    margin-left: 0rem !important;
+  }
+  .inside-text-box {
+    text-align: center;
+  }
 }
-.links li{
-    padding: 0.8rem;
-    border-radius: 4px;
+li a:hover {
+  color: rgb(88, 88, 88);
+  text-decoration: none;
 }
-.burger{
-    color: black;
-    cursor: pointer;
-    position:absolute;
-    right: 8000px;
+.links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+}
+.links li {
+  padding: 0.8rem;
+  border-radius: 4px;
+}
+.burger {
+  color: black;
+  cursor: pointer;
+  position: absolute;
+  right: 8000px;
 }
 @media (max-width: 800px) {
-    .links{
-        display: none;
-    }
-    .burger{
-        right: 2rem;
-    }
+  .links {
+    display: none;
+  }
+  .burger {
+    right: 2rem;
+  }
 }
 
-.main-box{
-    display:flex;
-    justify-content: space-between;
+.main-box {
+  display: flex;
+  justify-content: space-between;
 }
-.text-box{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 10rem;
+.text-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10rem;
 }
 
 /* About Me */
-.about-me{
-    margin: 2rem 6rem;
-    text-align: justify;
+.about-me {
+  margin: 2rem 6rem;
 }
-.dashes{
-    font-size: 22pt;
-    color: rgb(54, 138, 172);
+.dashes {
+  font-size: 22pt;
+  color: rgb(54, 138, 172);
 }
-.center{
-    text-align: center;
+.center {
+  text-align: center;
 }
 @media (max-width: 800px) {
-    .about-me{
-        margin: 2rem;
-        text-align: justify;
-    }
-}
-/* Card Holder */
-.card-holder{
-    display: flex;
-    margin: 2rem 6rem;
-}
-.card{
-    /* padding: 0; */
-    /* height: 280px; */
-    width: 100%;
-    /* margin: 1.2rem; */
-}
-
-.card-1, .card-2{
-    margin-right: 1.2rem;
-}
-.card-3{
-    margin-left: 0;
-}
-@media (max-width: 990px) {
-    .card-holder{
-        flex-direction: column;
-        margin: 2rem;
-    }
-   .card{
-       margin: 1.2rem 0;
-       padding: 1.2rem;
-   }
-}
-.inside-card{
-    padding: 0.6rem;
-    height: 100%;
-}
-.read-more-tag{
-    position: absolute;
-    bottom: 0.2rem;
-    text-decoration: none;
-}
-.read-more-tag a{
-    text-decoration: none;
-}
-a:hover{
-    text-decoration: none !important;
-}
-.arrow-icon:hover{
-    font-size: 16pt;
+  .about-me {
+    margin: 2rem;
+    text-align: justify;
+  }
 }
 
 /* Projects */
-.projects-section{
-    margin: 2rem 6rem;
+.projects-section {
+  margin: 2rem 6rem;
 }
-.block{
-    display: flex;
-    margin-bottom: 2.2rem;
+.block {
+  display: flex;
+  margin-bottom: 2.2rem;
 }
-.project-img{
-    width: 100%;
-    object-fit: cover;
-    /* margin: auto; */
+.project-img {
+  width: 100%;
+  object-fit: cover;
+  /* margin: auto; */
 }
 
-.project-display-left{
-    margin-right: 1.2rem;
+.project-display-left {
+  margin-right: 1.2rem;
 }
-.project-display-left, .project-display-right{
-    border: none;
+.project-display-left,
+.project-display-right {
+  border: none;
 }
 .project-card {
-    position: relative;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 1px solid rgba(0,0,0,.125);
-    border-radius: 0.25rem;
-    width: 100%;
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  width: 100%;
 }
 /* .small-text{
     line-height: 1;
     margin-bottom: 3.2rem;
 } */
 @media (max-width: 990px) {
-    .block{
-        flex-direction: column;
-    }
-    .projects-section{
-        margin: 2rem;
-
-    }
-    .project-display-left{
-        margin-right: 0;
-    }
-    .project-card {
-        margin-bottom: 2rem;
-    }
-    .take-care{
-        margin-top: 8.2rem !important;
-    }
+  .block {
+    flex-direction: column;
+  }
+  .projects-section {
+    margin: 2rem;
+  }
+  .project-display-left {
+    margin-right: 0;
+  }
+  .project-card {
+    margin-bottom: 2rem;
+  }
+  .take-care {
+    margin-top: 8.2rem !important;
+  }
 }
 
 /* Footer */
-footer{
-    position: absolute;
-    background-color: rgb(18, 110, 146);
-    margin: 0;
-    width: 100%;
-    min-height: 340px;
+footer {
+  position: absolute;
+  background-color: rgb(18, 110, 146);
+  margin: 0;
+  width: 100%;
 }
-.social-links{
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+.social-links {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.social-links li{
-    margin: 0.2rem;
-    padding: 0.2rem;
+.social-links li {
+  margin: 0.2rem;
+  padding: 0.2rem;
 }
 
-.social-links li:hover{
-    color: white !important;
-    transform: scale(1.1);
+.social-links li:hover {
+  color: white !important;
+  transform: scale(1.1);
 }
-.icons{
-    font-size: 18pt;
+.icons {
+  font-size: 18pt;
 }
-.icons:hover{
-    font-size: 19pt;
-    color: white;
-}
-
-/* Carousel */
-.slideshow-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.Containers {
-    display: none;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-}
-.Back, .forward {
-    cursor: pointer;
-    position: relative;
-    top: 48%;
-    width: auto;
-    margin-top: -23px;
-    padding: 17px;
-    color: grey;
-    font-weight: bold;
-    font-size: 19px;
-    transition: 0.4s ease;
-    border-radius: 0 5px 5px 0;
-    user-select: none;
+.icons:hover {
+  font-size: 19pt;
+  color: white;
 }
 
-/* Place the "forward button" to the right */
-.forward {
-    right: 0;
-    border-radius: 4px 0 0 4px;
+.typed {
+  font-size: 1.4rem;
+  /* color: rgb(255, 255, 255); */
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
 }
 
-/*when the user hovers,add a black background with some little opacity */
-.Back:hover, .forward:hover {
-    background-color: rgba(0,0,0,0.6);
+.typed-cursor {
+  font-size: 1.4rem;
+  /* color: rgb(255, 255, 255); */
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
 }
-.Info {
-    font-size: 16px;
-    padding: 10px 14px;
-    position: absolute;
-    bottom: 10px;
-    width: 100%;
-    text-align: center;
+
+.experience-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 2rem 6rem;
 }
-.MessageInfo {
-    font-size: 14px;
-    padding: 10px 14px;
-    position: absolute;
-    top: 0;
+
+
+.experience-title{
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
 }
-.dots {
-    cursor: pointer;
-    height: 16px;
-    width: 16px;
-    margin: 0 3px;
-    background-color: #acc;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.5s ease;
+
+.experience-subtitle{
+  font-size: 0.9rem;
+
+  font-weight: 300;
+  margin: 0;
+  padding: 0;
 }
-.enable, .dots:hover {
-    background-color: #717161;
+
+.sessions{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* margin: 2rem 6rem; */
 }
-.spoosh {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 8.4s;
-    animation-name: fade;
-    animation-duration: 8.4s;
+
+.session ul, li{
+  list-style: none;
 }
-@-webkit-keyframes spoosh {
-    from {opacity: .5}
-    to {opacity: 2}
+
+.about-me-desc{
+  text-indent: 3rem;
+  text-align: justify;
+  padding: 0.6rem 0rem;
 }
-  
-@keyframes spoosh {
-    from {opacity: .5}
-    to {opacity: 2}
+/* 
+      <div class="container pt-4">
+        <h6 class="mb-0">Phone</h6>
+        <small>+92 300 4755991</small><br /><br />
+        <h6 class="mb-0">Email</h6>
+        <small>razanabeel512@gmail.com</small><br /><br />
+        <h6 class="mb-0">Contact me:</h6>
+        <small>linkedin.com/in/nabeelraza-7/</small><br /><br />
+      </div>
+*/
+/* TIMELINE */
+
+
+/* Card container */
+.card {
+  position: relative;
+  border: none !important; 
+  /* max-width: 35rem; */
 }
-  
+
+/* setting padding based on even or odd */
+.card:nth-child(odd) {
+  padding: 30px 0 30px 30px;
+}
+.card:nth-child(even) {
+  padding: 30px 30px 30px 0;
+}
+/* Global ::before */
+.card::before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  border: solid rgb(18, 110, 146);
+}
+
+/* Setting the border of top, bottom, left */
+.card:nth-child(odd)::before {
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  border-width: 5px 0 5px 5px;
+  border-radius: 50px 0 0 50px;
+}
+
+/* Setting the border of top, bottom, right */
+.card:nth-child(even)::before {
+  right: 0;
+  top: -0.3rem;
+  bottom: 0;
+  border-width: 5px 5px 5px 0;
+  border-radius: 0 50px 50px 0;
+}
+
+/* Removing the border if it is the first card */
+.card:first-child::before {
+  border-top: 0;
+  border-top-left-radius: 0;
+}
+
+/* Removing the border if it is the last card  and it's odd */
+.card:last-child:nth-child(odd)::before {
+  border-bottom: 0;
+  border-bottom-left-radius: 0;
+}
+
+/* Removing the border if it is the last card  and it's even */
+.card:last-child:nth-child(even)::before {
+  border-bottom: 0;
+  border-bottom-right-radius: 0;
+}
+
+/* Information about the timeline */
+.info {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.info-desc{
+  text-align: justify;
+  padding: 0.6rem 0rem 0rem 0rem;
+}
+
+/* Title of the card */
+.title {
+  /* color: rgb(18, 110, 146); */
+  position: relative;
+}
+
+/* Timeline dot  */
+.title::before {
+  content: "";
+  position: absolute;
+  /* top: 0; */
+  bottom: 0.2rem;
+  margin: 0 -0.45rem;
+  width: 1.6rem;
+  height: 1.6rem; 
+  background: white;
+  border-radius: 999px;
+  border: 4px solid rgb(18, 110, 146);
+}
+
+/* text right if the card is even  */
+.card:nth-child(even) > .info > .title {
+  text-align: right;
+}
+
+/* setting dot to the left if the card is odd */
+.card:nth-child(odd) > .info > .title::before {
+  left: -45px;
+}
+
+/* setting dot to the right if the card is odd */
+.card:nth-child(even) > .info > .title::before {
+  right: -45px;
+}
